--- a/weechat/.weechat/plugins.conf
+++ b/weechat/.weechat/plugins.conf
@@ -1,9 +1,10 @@
 #
-# plugins.conf -- weechat v0.4.3
+# plugins.conf -- weechat v1.0
 #
 
 [var]
 fifo.fifo = "on"
+guile.check_license = "off"
 lua.check_license = "off"
 perl.check_license = "off"
 perl.notify_send.command = "notify-send "<i>WeeChat</i> - <b>$type by $name</b>" "$message""
