--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.4.3
+# weechat.conf -- weechat v1.0
 #
 
 [debug]
@@ -17,6 +17,8 @@ bar_more_down = "++"
 bar_more_left = "<<"
 bar_more_right = ">>"
 bar_more_up = "--"
+bare_display_exit_on_input = on
+bare_display_time_format = "%H:%M"
 buffer_auto_renumber = on
 buffer_notify_default = all
 buffer_position = end
@@ -45,7 +47,7 @@ emphasized_attributes = ""
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
-hotlist_add_buffer_if_away = on
+hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0"
 hotlist_buffer_separator = ", "
 hotlist_count_max = 2
 hotlist_count_min_msg = 2
@@ -54,6 +56,7 @@ hotlist_names_length = 0
 hotlist_names_level = 12
 hotlist_names_merged_buffers = off
 hotlist_prefix = "H: "
+hotlist_remove = merged
 hotlist_short_names = on
 hotlist_sort = group_time_asc
 hotlist_suffix = ""
@@ -172,6 +175,7 @@ status_filter = green
 status_more = yellow
 status_name = white
 status_name_ssl = lightgreen
+status_nicklist_count = default
 status_number = yellow
 status_time = default
 
@@ -239,6 +243,20 @@ input.separator = off
 input.size = 1
 input.size_max = 0
 input.type = window
+isetbar.color_bg = default
+isetbar.color_delim = cyan
+isetbar.color_fg = default
+isetbar.conditions = ""
+isetbar.filling_left_right = vertical
+isetbar.filling_top_bottom = horizontal
+isetbar.hidden = on
+isetbar.items = "isetbar_help"
+isetbar.position = top
+isetbar.priority = 0
+isetbar.separator = on
+isetbar.size = 3
+isetbar.size_max = 3
+isetbar.type = window
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -253,7 +271,7 @@ nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 0
 nicklist.type = window
-status.color_bg = gray
+status.color_bg = black
 status.color_delim = cyan
 status.color_fg = default
 status.conditions = ""
@@ -267,7 +285,7 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = gray
+title.color_bg = black
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
@@ -563,6 +581,10 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@chat(perl.iset):button1 = "hsignal:iset_mouse"
+@chat(perl.iset):button2* = "hsignal:iset_mouse"
+@chat(perl.iset):wheeldown = "/repeat 5 /iset **down"
+@chat(perl.iset):wheelup = "/repeat 5 /iset **up"
 @chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
 @chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
 @chat(script.scripts):wheeldown = "/script down 5"
