--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "dircolors/src/dircolors-solarized"]
 	path = dircolors/src/dircolors-solarized
-	url = git@github.com:seebi/dircolors-solarized.git
+	url = https://github.com/seebi/dircolors-solarized.git
 [submodule "vim/.vim/bundle/vundle"]
 	path = vim/.vim/bundle/vundle
-	url = git@github.com:gmarik/vundle.git
+	url = https://github.com/gmarik/vundle.git
 [submodule "mutt/.mutt/mutt-colors-solarized"]
 	path = mutt/.mutt/mutt-colors-solarized
-	url = git@github.com:altercation/mutt-colors-solarized.git
+	url = https://github.com/altercation/mutt-colors-solarized.git
 [submodule "zsh/.oh-my-zsh"]
 	path = zsh/.oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
