Ignored log files, updated weechat

--- a/weechat/.weechat/script.conf
+++ b/weechat/.weechat/script.conf
@@ -1,5 +1,5 @@
 #
-# script.conf -- weechat v1.0
+# script.conf -- weechat v1.0.1
 #
 
 [look]
@@ -44,5 +44,5 @@ text_version_selected = lightmagenta
 autoload = on
 cache_expire = 60
 dir = "%h/script"
-hold = ""
+hold = "urlserver.py"
 url = "http://www.weechat.org/files/plugins.xml.gz"
