--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -1,5 +1,5 @@
 #
-# irc.conf -- weechat v1.0
+# irc.conf -- weechat v1.0.1
 #
 
 [look]
@@ -50,7 +50,7 @@ part_closes_buffer = off
 pv_buffer = independent
 pv_tags = "notify_private"
 raw_messages = 256
-server_buffer = merge_with_core
+server_buffer = independent
 smart_filter = on
 smart_filter_delay = 5
 smart_filter_join = on
