More changes, ignored things

--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -227,7 +227,7 @@ foonetic.notify
 &bitlbee.sasl_timeout
 &bitlbee.autoconnect = on
 &bitlbee.autoreconnect
-&bitlbee.autoreconnect_delay
+&bitlbee.autoreconnect_delay = 1
 &bitlbee.nicks
 &bitlbee.username
 &bitlbee.realname
