Modified i3status wifi adapter name

--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -15,7 +15,7 @@ order += "ipv6"
 order += "disk /"
 order += "run_watch DHCP"
 order += "run_watch VPN"
-order += "wireless wlan0"
+order += "wireless wlp3s0"
 order += "ethernet eth0"
 order += "battery 0"
 order += "battery 1"
@@ -23,7 +23,7 @@ order += "volume master"
 order += "load"
 order += "tztime local"
 
-wireless wlan0 {
+wireless wlp3s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
 }
