Update git config with right editor and status command

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,5 @@
+[core]
+	editor = vim
 [user]
 	email = he.andrew.mail@gmail.com
 	name = Andrew He
@@ -21,3 +23,5 @@
 	rebase = true
 [rebase]
 	autosquash = true
+[gitsh]
+	defaultCommand = st
