--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -35,7 +35,7 @@ bindsym $mod+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
- bindsym $mod+space exec --no-startup-id j4-dmenu-desktop
+bindsym $mod+space exec --no-startup-id j4-dmenu-desktop --no-generic --display-binary
 
 # change focus
 bindsym $mod+h focus left
