--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -11,8 +11,10 @@ general {
         interval = 5
 }
 
-order += "ipv6"
 order += "disk /"
+order += "disk /var"
+order += "disk /home"
+order += "ipv6"
 order += "run_watch DHCP"
 order += "run_watch VPN"
 order += "wireless wlp3s0"
@@ -67,5 +69,11 @@ load {
 }
 
 disk "/" {
-        format = "%avail"
+        format = "/: %avail"
+}
+disk "/var" {
+        format = "/var: %avail"
+}
+disk "/home" {
+        format = "/home: %avail"
 }
