[i3] Update status with new wifi config

--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -17,15 +17,15 @@ order += "disk /home"
 order += "ipv6"
 order += "run_watch DHCP"
 order += "run_watch VPN"
-order += "wireless wlp3s0"
+order += "wireless wlp2s0"
 order += "ethernet eth0"
 order += "battery 0"
-order += "battery 1"
+#order += "battery 1"
 order += "volume master"
 order += "load"
 order += "tztime local"
 
-wireless wlp3s0 {
+wireless wlp2s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
 }
