[git] Misc updates

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,7 @@
 [core]
 	editor = nvim
 [user]
-	email = he.andrew.mail@gmail.com
+	email = ecnerwala@users.noreply.github.com
 	name = Andrew He
 [push]
 	default = simple
@@ -47,3 +47,5 @@
 [pretty]
 	myline = %C(auto)%h %s %C(green)(%cr)%C(auto) %C(blue)<%an>%C(auto)%d
 	myfull = format:%C(auto)%h %C(bold)%s%C(auto) %d%nAuthor: %C(blue)%an <%ae>%C(auto)%nAuthor Date: %C(green)%ad (%ar)%C(auto)%nCommitter: %C(blue)%cn <%ce>%C(auto)%nCommitter Date: %C(green)%cd (%cr)%C(auto)%n%w(76,4,4)%+b
+[init]
+	defaultBranch = main
