[i3] Turn on window icons

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,6 +20,8 @@ set $alt Mod1
 # chose a FreeType font, such as:
 font pango:DejaVu Sans Mono 9
 
+for_window [all] title_window_icon on
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
