--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -65,6 +65,7 @@ ext x?html?, has uzbl-tabbed,    X, flag f = uzbl-tabbed -- "$@"
 ext x?html?, has uzbl-browser,   X, flag f = uzbl-browser -- "$@"
 ext x?html?, has uzbl-core,      X, flag f = uzbl-core -- "$@"
 ext x?html?, has midori,         X, flag f = midori -- "$@"
+ext x?html?, has firefox,        X, flag f = firefox -- "$@"
 ext x?html?, has chromium,       X, flag f = chromium -- "$@"
 ext x?html?, has google-chrome-stable,       X, flag f = google-chrome-stable -- "$@"
 ext x?html?, has opera,          X, flag f = opera -- "$@"
